# Advent-of-Code

2022/Day_1/: CMakeLists.txt  main.c
2022/Day_10/: CMakeLists.txt  main.c
2022/Day_11/: CMakeLists.txt  main.c
2022/Day_12/: CMakeLists.txt  main.c
2022/Day_12/include/fruity/: fruity.c  fruity.h  fruity_io.c  fruity_io.h
2022/Day_13/: CMakeLists.txt  main.c
2022/Day_14/: CMakeLists.txt  main.c
2022/Day_15/: CMakeLists.txt  main.c
2022/Day_16/: CMakeLists.txt  main.c  utils.c  utils.h
2022/Day_17/: CMakeLists.txt  a.out  main.c
2022/Day_18/: CMakeLists.txt  main.c
2022/Day_19/: CMakeLists.txt  main.c
2022/Day_2/: CMakeLists.txt  main.c
2022/Day_20/: CMakeLists.txt  main.c
2022/Day_21/: CMakeLists.txt  main.c
2022/Day_22/: CMakeLists.txt  main.c
2022/Day_23/: CMakeLists.txt  main.c
2022/Day_24/: CMakeLists.txt  main.c  vis.c  vis.h
2022/Day_25/: CMakeLists.txt  main.c
2022/Day_3/: CMakeLists.txt  main.c
2022/Day_4/: CMakeLists.txt  main.c  sets.c
2022/Day_5/: CMakeLists.txt  main.c  stack.c  stack.h
2022/Day_6/: CMakeLists.txt  main.c  sets.h
2022/Day_7/: CMakeLists.txt  main.c
2022/Day_8/: CMakeLists.txt
2022/Day_9/: CMakeLists.txt  main.c
2023/Day_1/: Day_1.cpp  main.cpp
2023/Day_10/: main.cpp
2023/Day_11/: main.cpp
2023/Day_12/: main.cpp
2023/Day_13/: main.cpp
2023/Day_14/: main.cpp
2023/Day_15/: main.cpp
2023/Day_16/: main.cpp
2023/Day_17/: main.cpp
2023/Day_18/: main.cpp
2023/Day_19/: main.cpp
2023/Day_2/: main.cpp
2023/Day_20/: main.cpp
2023/Day_21/: main.cpp
2023Day_11/: main.cpp
(+14 files in other folders)
